# poetry-docker-demo

./: .dockerignore  .gitignore  01-simple.Dockerfile  02-simple-slim.Dockerfile  03-multistage.Dockerfile  04-no-root.Dockerfile  06-final-slim-build.Dockerfile  Dockerfile  LICENSE  README.md  benchmark.sh  pyproject.toml
hello_world/: main.py
